--- a/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_tecnico.xml
+++ b/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_tecnico.xml
@@ -65,7 +65,7 @@
         android:layout_height="19dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="Área invadida?"
+        android:text="Área invadida? *"
         app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaInvadida"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/radioGroupFiscaInvadida"
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="Tipo de Ligação"
+        android:text="Tipo de Ligação *"
         app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaLigacao"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/radioGroupFiscaLigacao"
@@ -151,7 +151,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="Existe rede no local?"
+        android:text="Existe rede no local? *"
         app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaRede"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/radioGroupFiscaRede"
@@ -191,7 +191,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="Padrão já montado?"
+        android:text="Padrão já montado? *"
         app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaPadrao"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/radioGroupFiscaPadrao"
@@ -231,7 +231,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="Faixa de servidão"
+        android:text="Faixa de servidão *"
         app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaServidao"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/radioGroupFiscaServidao"
@@ -285,7 +285,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="Houve pré indicação?"
+        android:text="Houve pré indicação? *"
         app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaIndicacao"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/radioGroupFiscaIndicacao"
@@ -335,7 +335,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="CPF do funcionário que indicou"
+            android:hint="CPF do funcionário que indicou *"
             android:inputType="number"
             android:maxLength="11"/>
     </android.support.design.widget.TextInputLayout>
