--- a/app/src/main/res/layout/activity_fiscalizacao_clandestino_form.xml
+++ b/app/src/main/res/layout/activity_fiscalizacao_clandestino_form.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:text="Funcionário"
+            android:text="Funcionário *"
             app:layout_constraintBottom_toBottomOf="@+id/spinnerFiscaFuncionario"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/spinnerFiscaFuncionario" />
@@ -82,7 +82,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nome"
+                android:hint="Nome *"
                 android:inputType="textPersonName"
                 android:maxLength="50"/>
         </android.support.design.widget.TextInputLayout>
@@ -103,7 +103,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Endereço"
+                android:hint="Endereço *"
                 android:inputType="textPostalAddress"
                 android:maxLength="75"/>
         </android.support.design.widget.TextInputLayout>
@@ -124,7 +124,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Bairro"
+                android:hint="Bairro *"
                 android:inputType="text"
                 android:maxLength="40"/>
         </android.support.design.widget.TextInputLayout>
@@ -135,7 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:text="Município"
+            android:text="Município *"
             app:layout_constraintBottom_toBottomOf="@+id/spinnerFiscaMunicipio"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/spinnerFiscaMunicipio" />
@@ -170,7 +170,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="CPF"
+                android:hint="CPF *"
                 android:inputType="number"
                 android:maxLength="11"/>
         </android.support.design.widget.TextInputLayout>
@@ -193,7 +193,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="CPF consultado"
+            android:text="CPF consultado *"
             app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaCpfConsultado"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFiscaCPF"
