--- a/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_cadastramento.xml
+++ b/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_cadastramento.xml
@@ -59,7 +59,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="RG"
+            android:hint="RG *"
             android:inputType="number"
             android:maxLength="11"/>
     </android.support.design.widget.TextInputLayout>
@@ -82,7 +82,7 @@
             android:id="@+id/maskedEditTextFiscaNascimento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Data de nascimento"
+            android:hint="Data de nascimento *"
             android:inputType="date"
             app:layout_constraintEnd_toEndOf="@+id/textInputLayoutFiscaNascimento"
             app:layout_constraintStart_toStartOf="@+id/textInputLayoutFiscaNascimento"
@@ -113,7 +113,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Medidor vizinho 1"
+            android:hint="Medidor vizinho 1 *"
             android:inputType="text"
             android:maxLength="50"/>
     </android.support.design.widget.TextInputLayout>
@@ -258,7 +258,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Latitude"
+            android:hint="Latitude *"
             android:inputType="numberSigned|numberDecimal"
             android:maxLength="20"/>
     </android.support.design.widget.TextInputLayout>
@@ -279,7 +279,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Longitude"
+            android:hint="Longitude *"
             android:inputType="numberSigned|numberDecimal"
             android:maxLength="20"/>
     </android.support.design.widget.TextInputLayout>
