--- a/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_cadastramento.xml
+++ b/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_cadastramento.xml
@@ -260,7 +260,7 @@
             android:layout_height="wrap_content"
             android:hint="Latitude *"
             android:inputType="numberSigned|numberDecimal"
-            android:maxLength="20"/>
+            android:maxLength="20" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -283,5 +283,28 @@
             android:inputType="numberSigned|numberDecimal"
             android:maxLength="20"/>
     </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButtonFiscaGPS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutFiscaLatitude"
+        app:layout_constraintEnd_toEndOf="parent"
+        mask:srcCompat="@drawable/ic_gps_add" />
+
+    <ProgressBar
+        android:id="@+id/progressBarFiscaGPS"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButtonFiscaGPS"
+        app:layout_constraintEnd_toStartOf="@+id/floatingActionButtonFiscaGPS"
+        app:layout_constraintTop_toTopOf="@+id/floatingActionButtonFiscaGPS" />
 
 </android.support.constraint.ConstraintLayout>
