Ajuste para proibir escrever letras nos campos de number

--- a/app/src/main/res/layout/activity_fiscalizacao_clandestino_form.xml
+++ b/app/src/main/res/layout/activity_fiscalizacao_clandestino_form.xml
@@ -172,6 +172,7 @@
                 android:layout_height="wrap_content"
                 android:hint="CPF *"
                 android:inputType="number"
+                android:digits="0123456789"
                 android:maxLength="11"/>
         </android.support.design.widget.TextInputLayout>
         <Button
