--- a/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_tecnico.xml
+++ b/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_tecnico.xml
@@ -337,6 +337,7 @@
             android:layout_height="wrap_content"
             android:hint="CPF do funcionário que indicou *"
             android:inputType="number"
+            android:digits="0123456789"
             android:maxLength="11"/>
     </android.support.design.widget.TextInputLayout>
 
