Alterado a lista dos nomes dos funcionários cadastradores.

--- a/app/src/main/res/values/funcionarios.xml
+++ b/app/src/main/res/values/funcionarios.xml
@@ -4,22 +4,33 @@
         <item>Selecione</item>
         <item>ADRIANO FERREIRA CONCEICAO</item>
         <item>ANDERSON FACINI GOULART COLODETTE</item>
+        <item>ANDERSON LUIS ROCHA DUARTE</item>
         <item>BRUNO MARTINS DA ROCHA</item>
+        <item>CHARLIE DA MATTA MELO</item>
         <item>CLEBER RODRIGUES CEZAR</item>
         <item>CLEYTON DA CONCEICAO RIBEIRO</item>
+        <item>EDUARDO LEANDRO TÓRTORA</item>
         <item>FABIO BARBOSA GALVAO</item>
         <item>GILMAR DE OLIVEIRA MARTINS</item>
+        <item>IAGO SOARES BARBOSA</item>
         <item>JOAO ANTONIO DE SOUZA DIAS</item>
+        <item>JOSE HENRIQUE DOS SANTOS</item>
         <item>LEANDRO VALENTE TRAVASSOS</item>
+        <item>LÉLIO SANTANA LIMA</item>
+        <item>LEO FRANCISCO GUIMARAES CASSA FILHO</item>
         <item>LUCIANA GOMES PEIXOTO</item>
         <item>LUCIANO VICENTE</item>
+        <item>MARCELO LIMA DOS SANTOS</item>
+        <item>MARCOS VINICIUS GONCALVES DE MOURA</item>
         <item>MAXUEL CRISPIM ALVES</item>
+        <item>MIGUEL DO ESPIRITO SANTO LIMA</item>
         <item>PEDRO PAULO ZANARDI</item>
         <item>ROGERIO RAPOSO DOS SANTOS</item>
         <item>RONALDO DA SILVA CORREA</item>
         <item>SERGIO PAES</item>
         <item>SILVIO DE OLIVEIRA BARBOSA</item>
         <item>TADEU FRANCISCO SILVA</item>
+        <item>THIAGO SANT'ANNA DE SOUZA</item>
         <item>WELLINGTON DA COSTA SUZARTE</item>
         <item>WHESLEY FERREIRA PENA</item>
     </string-array>
