Fix no nome de um funcionário que tem apóstrofe e deve ser escapado

--- a/app/src/main/res/values/funcionarios.xml
+++ b/app/src/main/res/values/funcionarios.xml
@@ -30,7 +30,7 @@
         <item>SERGIO PAES</item>
         <item>SILVIO DE OLIVEIRA BARBOSA</item>
         <item>TADEU FRANCISCO SILVA</item>
-        <item>THIAGO SANT'ANNA DE SOUZA</item>
+        <item>THIAGO SANT\'ANNA DE SOUZA</item>
         <item>WELLINGTON DA COSTA SUZARTE</item>
         <item>WHESLEY FERREIRA PENA</item>
     </string-array>
