Adicionado novos campos no formulário de fiscalização de clandestinos

--- a/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_tecnico.xml
+++ b/app/src/main/res/layout/activity_fiscalizacao_clandestino_form_tecnico.xml
@@ -20,6 +20,109 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView60"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="Serviço direcionado? *"
+        app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaServicoDirecionado"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/radioGroupFiscaServicoDirecionado"
+        app:layout_constraintVertical_bias="0.0" />
+    <RadioGroup
+        android:id="@+id/radioGroupFiscaServicoDirecionado"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView60"
+        app:layout_constraintTop_toBottomOf="@+id/textView49">
+
+        <RadioButton
+            android:id="@+id/radioButtonFiscaServicoDirecionado1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Sim" />
+
+        <RadioButton
+            android:id="@+id/radioButtonFiscaServicoDirecionado2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Não" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView61"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="Frente de trabalho *"
+        app:layout_constraintBottom_toBottomOf="@+id/spinnerFiscaFrente"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/spinnerFiscaFrente" />
+    <Spinner
+        android:id="@+id/spinnerFiscaFrente"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView61"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupFiscaServicoDirecionado" />
+
+    <TextView
+        android:id="@+id/textView63"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="Clandestino localizado? *"
+        app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaClandLocalizado"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/radioGroupFiscaClandLocalizado"
+        app:layout_constraintVertical_bias="0.0" />
+    <RadioGroup
+        android:id="@+id/radioGroupFiscaClandLocalizado"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView63"
+        app:layout_constraintTop_toBottomOf="@+id/textView61">
+
+        <RadioButton
+            android:id="@+id/radioButtonFiscaClandLocalizado1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Sim" />
+
+        <RadioButton
+            android:id="@+id/radioButtonFiscaClandLocalizado2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Não" />
+    </RadioGroup>
+
+    <TextView
         android:id="@+id/textView50"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
@@ -42,7 +145,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView50"
-        app:layout_constraintTop_toBottomOf="@+id/textView49">
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupFiscaClandLocalizado">
 
         <RadioButton
             android:id="@+id/radioButtonFiscaAreaPreserva1"
