--- a/app/src/main/res/layout/activity_album_lig_prov.xml
+++ b/app/src/main/res/layout/activity_album_lig_prov.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ligProvAlbumActivity">
+    tools:context=".ligacaoes_provisorias.ligProvAlbumActivity">
 
     <TextView
         android:id="@+id/textViewNoFotos"
