--- a/app/src/main/res/layout/activity_fiscalizacao_clandestino_album.xml
+++ b/app/src/main/res/layout/activity_fiscalizacao_clandestino_album.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fiscalizacaoClandestinoAlbumActivity">
+    tools:context=".fiscalizacao.fiscalizacaoClandestinoAlbumActivity">
 
     <TextView
         android:id="@+id/textViewFiscaNoFotos"
