--- a/app/src/main/res/layout/activity_fiscalizacao_clandestino_form.xml
+++ b/app/src/main/res/layout/activity_fiscalizacao_clandestino_form.xml
@@ -8,7 +8,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    tools:context=".fiscalizacaoClandestinoFormActivity">
+    tools:context=".fiscalizacao.fiscalizacaoClandestinoFormActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
