--- a/app/src/main/res/layout/activity_form_lig_prov_lev_carga.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov_lev_carga.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ligProvLevCargaActivity">
+    tools:context=".ligacaoes_provisorias.ligProvLevCargaActivity">
 
     <TextView
         android:id="@+id/textViewLevCargaNoRecords"
