--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ligacaoes_provisorias.ligProvImageActivity">
+    tools:context=".imageActivity">
 
     <ImageView
         android:id="@+id/viewFullImageBackGround"
