--- a/app/src/main/res/layout/fisc_clandest_activity_form.xml
+++ b/app/src/main/res/layout/fisc_clandest_activity_form.xml
@@ -8,7 +8,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    tools:context=".fiscalizacao.fiscalizacaoClandestinoFormActivity">
+    tools:context=".fiscalizacao_clandestino.fiscalizacaoClandestinoFormActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -258,7 +258,7 @@
 
         <!-- Cadastramento clandestino -->
         <include
-            layout="@layout/activity_fiscalizacao_clandestino_form_cadastramento"
+            layout="@layout/fisc_clandest_activity_form_cadastramento"
             android:id="@+id/partForm1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -269,7 +269,7 @@
 
         <!-- Dados técnicos -->
         <include
-            layout="@layout/activity_fiscalizacao_clandestino_form_tecnico"
+            layout="@layout/fisc_clandest_activity_form_tecnico"
             android:id="@+id/partForm2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -280,7 +280,7 @@
 
         <!-- Dados técnicos -->
         <include
-            layout="@layout/activity_fiscalizacao_clandestino_form_final"
+            layout="@layout/fisc_clandest_activity_form_final"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
