--- a/app/src/main/res/layout/fisc_clandest_activity_main.xml
+++ b/app/src/main/res/layout/fisc_clandest_activity_main.xml
@@ -4,40 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fiscalizacao.fiscalizacaoClandestinoAlbumActivity">
+    tools:context=".fiscalizacao_clandestino.fiscalizacaoClandestinoActivity">
 
     <TextView
-        android:id="@+id/textViewFiscaNoFotos"
+        android:id="@+id/textViewFiscaNoRecords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Não há fotos capturadas"
+        android:text="@string/item_sem_registros"
         android:textSize="18sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewFiscaAlbum"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:id="@+id/recyclerViewFiscalizacao"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_album_lig_prov">
+        tools:listitem="@layout/item_fiscaliza_clandestino" />
 
-    </android.support.v7.widget.RecyclerView>
-
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButtonFiscalizaClandestinoAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_add" />
 </android.support.constraint.ConstraintLayout>
