--- a/app/src/main/res/layout/fisca_cland_activity_album.xml
+++ b/app/src/main/res/layout/fisca_cland_activity_album.xml
@@ -4,43 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fiscalizacao_clandestino.fiscalizacaoClandestinoActivity">
+    tools:context=".fiscalizacao_clandestino.fiscaClandAlbumActivity">
 
     <TextView
-        android:id="@+id/textViewFiscaNoRecords"
+        android:id="@+id/textViewFiscaNoFotos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="@string/item_sem_registros"
+        android:text="Não há fotos capturadas"
         android:textSize="18sp"
-        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewFiscalizacao"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/recyclerViewFiscaAlbum"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_fiscaliza_clandestino" />
+        tools:listitem="@layout/item_album_lig_prov">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButtonFiscalizaClandestinoAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add" />
+    </android.support.v7.widget.RecyclerView>
+
+
 </android.support.constraint.ConstraintLayout>
