--- a/app/src/main/res/layout/fisca_cland_activity_form.xml
+++ b/app/src/main/res/layout/fisca_cland_activity_form.xml
@@ -8,7 +8,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    tools:context=".fiscalizacao_clandestino.fiscalizacaoClandestinoFormActivity">
+    tools:context=".fiscalizacao_clandestino.fiscaClandFormActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -321,7 +321,7 @@
 
         <!-- Cadastramento clandestino -->
         <include
-            layout="@layout/fisc_clandest_activity_form_cadastramento"
+            layout="@layout/fisca_cland_activity_form_cadastramento"
             android:id="@+id/partForm1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -332,7 +332,7 @@
 
         <!-- Dados técnicos -->
         <include
-            layout="@layout/fisc_clandest_activity_form_tecnico"
+            layout="@layout/fisca_cland_activity_form_tecnico"
             android:id="@+id/partForm2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -343,7 +343,7 @@
 
         <!-- Dados técnicos -->
         <include
-            layout="@layout/fisc_clandest_activity_form_final"
+            layout="@layout/fisca_cland_activity_form_final"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
