Adição de novo campo no formulário de Fiscalização de Clandestinos

--- a/app/src/main/res/layout/fisca_cland_activity_form_tecnico.xml
+++ b/app/src/main/res/layout/fisca_cland_activity_form_tecnico.xml
@@ -328,6 +328,46 @@
             android:text="Não" />
     </RadioGroup>
 
+    <TextView
+        android:id="@+id/textView63"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="Energia emprestada? *"
+        app:layout_constraintBottom_toBottomOf="@+id/radioGroupFiscaEnergiaEmprestada"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/radioGroupFiscaEnergiaEmprestada"
+        app:layout_constraintVertical_bias="0.0" />
+    <RadioGroup
+        android:id="@+id/radioGroupFiscaEnergiaEmprestada"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView63"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupFiscaServidao">
+
+        <RadioButton
+            android:id="@+id/radioButtonFiscaEnergiaEmprestada1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Sim" />
+
+        <RadioButton
+            android:id="@+id/radioButtonFiscaEnergiaEmprestada2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Não" />
+    </RadioGroup>
+
 
     <TextView
         android:id="@+id/textView56"
@@ -340,7 +380,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroupFiscaServidao" />
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupFiscaEnergiaEmprestada" />
 
     <TextView
         android:id="@+id/textView57"
