Refactor - Ajuste no nome dos arquivos layout de item de recyclerview

--- a/app/src/main/res/layout/lig_cland_frag_main.xml
+++ b/app/src/main/res/layout/lig_cland_frag_main.xml
@@ -30,7 +30,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_clandestino">
+        tools:listitem="@layout/lig_cland_item">
 
     </android.support.v7.widget.RecyclerView>
 
