--- a/app/src/main/res/layout/activity_item_album.xml
+++ b/app/src/main/res/layout/activity_item_album.xml
@@ -33,6 +33,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/enel_logo" />
+        app:srcCompat="@drawable/energy_logo" />
 
 </android.support.constraint.ConstraintLayout>
