--- a/app/src/main/res/layout/fisca_cland_activity_main.xml
+++ b/app/src/main/res/layout/fisca_cland_activity_main.xml
@@ -30,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_fiscaliza_clandestino" />
+        tools:listitem="@layout/fisca_cland_item" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButtonFiscalizaClandestinoAdd"
